[gd_scene load_steps=31 format=3 uid="uid://d0vckdx2mjsyk"]

[ext_resource type="Script" path="res://Scenes/MainScenes/Game_Scene.gd" id="1_ndaas"]
[ext_resource type="Script" path="res://Scenes/MainScenes/UI.gd" id="3_fbc3h"]
[ext_resource type="Script" path="res://Scenes/Maps/Base.gd" id="3_vh0ua"]
[ext_resource type="Texture2D" uid="uid://chsn2oxanj63m" path="res://Assets/Environment/Base.png" id="4_5jvff"]
[ext_resource type="PackedScene" uid="uid://jtahul4s1fdq" path="res://Scenes/SupportScenes/cost_text.tscn" id="5_tnv53"]
[ext_resource type="Texture2D" uid="uid://skomcafjbwrq" path="res://Assets/Towers/GunCH.png" id="5_xef0h"]
[ext_resource type="Texture2D" uid="uid://bgi78qpcyafan" path="res://Assets/UI/Art/shots1.png" id="5_xqqav"]
[ext_resource type="Texture2D" uid="uid://bx5jeg85d1eog" path="res://Assets/Towers/TeslaTowerIcon.png" id="6_jq7ix"]
[ext_resource type="Texture2D" uid="uid://boorpiw4bcsmy" path="res://Assets/Towers/FlameThrowerCH.png" id="6_kd6ib"]
[ext_resource type="Texture2D" uid="uid://dqlxgnq3yi415" path="res://Assets/Towers/GunPackedCH.png" id="7_ipgkq"]
[ext_resource type="Texture2D" uid="uid://chuny0run43wf" path="res://Assets/Towers/MissileCH.png" id="8_w61c3"]
[ext_resource type="Texture2D" uid="uid://22j1qn8ygppx" path="res://Assets/Towers/BowCH.png" id="9_3ag03"]
[ext_resource type="Texture2D" uid="uid://c8nv4rcngm3go" path="res://Assets/UI/HPbar.jpg" id="10_1vpf7"]
[ext_resource type="Texture2D" uid="uid://dnxva50xdvrvs" path="res://Assets/UI/home.png" id="12_dwd0w"]
[ext_resource type="Texture2D" uid="uid://ddglc2ty1gdgf" path="res://Assets/UI/Buttons/PackAPunch.png" id="12_v6fqf"]
[ext_resource type="Texture2D" uid="uid://cmiu4rwgwuy0p" path="res://Assets/UI/Art/play.png" id="13_i5723"]
[ext_resource type="Texture2D" uid="uid://c4ts5v6yx54dj" path="res://Assets/UI/Art/FastR.png" id="14_ynx6q"]
[ext_resource type="PackedScene" uid="uid://d18w7kr6ryv1f" path="res://Scenes/SupportScenes/wave_counter.tscn" id="15_1p2rm"]
[ext_resource type="Texture2D" uid="uid://04dh6lixa48h" path="res://Assets/UI/Art/pauseW.png" id="16_5v754"]
[ext_resource type="FontFile" uid="uid://dric6xod7yyjs" path="res://Assets/Fonts/EraserDust.ttf" id="16_vjwya"]
[ext_resource type="PackedScene" uid="uid://y2fiahxu5ds0" path="res://Scenes/SupportScenes/round_change.tscn" id="17_nboh6"]
[ext_resource type="Texture2D" uid="uid://bseuy03k7sl5f" path="res://Assets/UI/Art/FastW.png" id="18_ssf4q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0u5j"]
size = Vector2(82, 713)

[sub_resource type="Animation" id="Animation_6pvmx"]
resource_name = "Fire"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/Shots:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1001, 0.15, 0.25, 0.2501, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect/Shots2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 0.06, 0.2, 0.25, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect/Shots3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1001, 0.15, 0.2, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect/Shots4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.25, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_v8wi4"]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1e-05, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.2, 0.0901961, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(850, -10), Vector2(855, -15), Vector2(850, -10)]
}

[sub_resource type="Animation" id="Animation_0gy2n"]
resource_name = "Hit2"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/Shots:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1001, 0.15, 0.25, 0.2501, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect/Shots2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01, 0.06, 0.2, 0.25, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect/Shots3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1001, 0.15, 0.2, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect/Shots4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.25, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.2, 0.0901961, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7d2lm"]
_data = {
"Fire": SubResource("Animation_6pvmx"),
"Hit": SubResource("Animation_v8wi4"),
"Hit2": SubResource("Animation_0gy2n")
}

[sub_resource type="LabelSettings" id="LabelSettings_trn6m"]
font = ExtResource("16_vjwya")
font_size = 60
outline_size = 10
outline_color = Color(0, 0.654902, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_ox1xs"]
font = ExtResource("16_vjwya")
font_size = 45
outline_size = 10
outline_color = Color(0, 0.705863, 1.15514e-06, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_e54u0"]
font = ExtResource("16_vjwya")
font_size = 45
font_color = Color(0, 0.352941, 0, 1)
outline_size = 10
outline_color = Color(0.266667, 0.713726, 0.45098, 1)
shadow_size = 10
shadow_color = Color(0.392157, 1, 0, 0.219608)
shadow_offset = Vector2(5, 5)

[node name="GameScene" type="Node2D"]
script = ExtResource("1_ndaas")

[node name="Base" type="Node2D" parent="."]
process_mode = 1
position = Vector2(100, 0)
script = ExtResource("3_vh0ua")

[node name="TextureRect" type="TextureRect" parent="Base"]
clip_contents = true
offset_left = 850.0
offset_top = -10.0
offset_right = 1930.0
offset_bottom = 740.0
pivot_offset = Vector2(122, 0)
texture = ExtResource("4_5jvff")
flip_h = true

[node name="Shots" type="TextureRect" parent="Base/TextureRect"]
visible = false
layout_mode = 0
offset_left = 112.0
offset_top = 521.0
offset_right = 192.0
offset_bottom = 540.0
rotation = 1.5708
texture = ExtResource("5_xqqav")
expand_mode = 1

[node name="Shots2" type="TextureRect" parent="Base/TextureRect"]
visible = false
layout_mode = 0
offset_left = 111.0
offset_top = 676.0
offset_right = 191.0
offset_bottom = 695.0
rotation = 1.5708
texture = ExtResource("5_xqqav")
expand_mode = 1

[node name="Shots3" type="TextureRect" parent="Base/TextureRect"]
visible = false
layout_mode = 0
offset_left = 111.0
offset_top = 119.0
offset_right = 191.0
offset_bottom = 138.0
rotation = 1.5708
texture = ExtResource("5_xqqav")
expand_mode = 1

[node name="Shots4" type="TextureRect" parent="Base/TextureRect"]
visible = false
layout_mode = 0
offset_left = 111.0
offset_top = -29.0
offset_right = 191.0
offset_bottom = -10.0
rotation = 1.5708
texture = ExtResource("5_xqqav")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="Base"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/Area2D"]
visible = false
position = Vector2(922, 357.5)
shape = SubResource("RectangleShape2D_u0u5j")

[node name="Damage" type="Timer" parent="Base"]
process_mode = 1
process_callback = 0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Base"]
libraries = {
"": SubResource("AnimationLibrary_7d2lm")
}
speed_scale = 0.5

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_fbc3h")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuildBar" type="BoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -500.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1
vertical = true

[node name="FlameThrower" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
process_mode = 3
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_kd6ib")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/FlameThrower" instance=ExtResource("5_tnv53")]
visible = false

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
process_mode = 3
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_xef0h")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/Gun" instance=ExtResource("5_tnv53")]
visible = false

[node name="TeslaCoil" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
process_mode = 3
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("6_jq7ix")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/TeslaCoil" instance=ExtResource("5_tnv53")]
visible = false

[node name="GunPacked" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
visible = false
custom_minimum_size = Vector2(125, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_ipgkq")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/GunPacked" instance=ExtResource("5_tnv53")]
visible = false

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("8_w61c3")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/Missile" instance=ExtResource("5_tnv53")]
visible = false
layout_mode = 1

[node name="CrossBow" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
custom_minimum_size = Vector2(75, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_3ag03")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/CrossBow" instance=ExtResource("5_tnv53")]
visible = false
layout_mode = 1

[node name="CrossBowPacked" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
visible = false
self_modulate = Color(0.117647, 0.145098, 0.137255, 1)
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_3ag03")
ignore_texture_size = true
stretch_mode = 0

[node name="CostText" parent="UI/HUD/BuildBar/CrossBowPacked" instance=ExtResource("5_tnv53")]
visible = false
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 25.0
offset_bottom = 25.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/BuildBar"]
layout_mode = 2

[node name="H" type="TextureRect" parent="UI/HUD"]
self_modulate = Color(0, 0, 0, 0.670588)
show_behind_parent = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2
size_flags_horizontal = 3
texture = ExtResource("10_1vpf7")

[node name="InfoBar" type="HBoxContainer" parent="UI/HUD/H"]
custom_minimum_size = Vector2(1040, 80)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -620.0
offset_right = 620.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="DollaSign" type="Label" parent="UI/HUD/H/InfoBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "$"
label_settings = SubResource("LabelSettings_trn6m")
horizontal_alignment = 2

[node name="Bal" type="Label" parent="UI/HUD/H/InfoBar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "200"
label_settings = SubResource("LabelSettings_ox1xs")
vertical_alignment = 2

[node name="HBox" type="HBoxContainer" parent="UI/HUD/H/InfoBar"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 10.0
alignment = 1

[node name="PackAPucnch" type="TextureButton" parent="UI/HUD/H/InfoBar/HBox"]
process_mode = 3
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("12_v6fqf")
ignore_texture_size = true
stretch_mode = 0

[node name="WaveCounter" parent="UI/HUD/H/InfoBar/HBox" instance=ExtResource("15_1p2rm")]
custom_minimum_size = Vector2(110, 80)
layout_mode = 2
size_flags_horizontal = 10
expand_mode = 1
flip_h = true

[node name="GameControls" type="HBoxContainer" parent="UI/HUD/H/InfoBar/HBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PausePlay" type="TextureButton" parent="UI/HUD/H/InfoBar/HBox/GameControls"]
process_mode = 3
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("16_5v754")
texture_pressed = ExtResource("13_i5723")
ignore_texture_size = true
stretch_mode = 0

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/H/InfoBar/HBox/GameControls"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("18_ssf4q")
texture_pressed = ExtResource("14_ynx6q")
stretch_mode = 0

[node name="HealthNum" type="Label" parent="UI/HUD/H/InfoBar"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "100"
label_settings = SubResource("LabelSettings_e54u0")
horizontal_alignment = 2

[node name="HomeIcon" type="TextureRect" parent="UI/HUD/H/InfoBar"]
modulate = Color(0.266667, 0.713726, 0.45098, 1)
custom_minimum_size = Vector2(50, 55)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("12_dwd0w")
expand_mode = 1

[node name="RoundChange" parent="UI/HUD" instance=ExtResource("17_nboh6")]
position = Vector2(228, 0)

[connection signal="body_entered" from="Base/Area2D" to="Base" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Base/Area2D" to="Base" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Base/Damage" to="Base" method="_on_damage_timeout"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/FlameThrower" to="UI/HUD/BuildBar/FlameThrower/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/FlameThrower" to="UI/HUD/BuildBar/FlameThrower/CostText" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/Gun" to="UI/HUD/BuildBar/Gun/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/Gun" to="UI/HUD/BuildBar/Gun/CostText" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/TeslaCoil" to="UI/HUD/BuildBar/TeslaCoil/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/TeslaCoil" to="UI/HUD/BuildBar/TeslaCoil/CostText" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/GunPacked" to="UI/HUD/BuildBar/GunPacked/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/GunPacked" to="UI/HUD/BuildBar/GunPacked/CostText" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/Missile" to="UI/HUD/BuildBar/Missile/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/Missile" to="UI/HUD/BuildBar/Missile/CostText" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/CrossBow" to="UI/HUD/BuildBar/CrossBow/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/CrossBow" to="UI/HUD/BuildBar/CrossBow/CostText" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/HUD/BuildBar/CrossBowPacked" to="UI/HUD/BuildBar/CrossBowPacked/CostText" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/HUD/BuildBar/CrossBowPacked" to="UI/HUD/BuildBar/CrossBowPacked/CostText" method="_on_mouse_exited"]
[connection signal="pressed" from="UI/HUD/H/InfoBar/HBox/PackAPucnch" to="UI" method="_on_pack_a_pucnch_pressed"]
[connection signal="pressed" from="UI/HUD/H/InfoBar/HBox/GameControls/PausePlay" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/HUD/H/InfoBar/HBox/GameControls/SpeedUp" to="UI" method="_on_speed_up_pressed"]
